# my-codex-app

./: .env.example  .gitignore  .oxfmtrc.json  AGENTS.md  LICENSE  README.md  README.zh.md  TODO.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json
.github/workflows/: deploy-client.yml  release-android.yml
apps/bridge/: CHANGELOG.md  README.md  package.json  tsdown.config.ts
apps/client/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/mobile/: package.json
apps/mobile/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs
docs/plans/: 2026-04-10-client-frontend-rebuild.md  2026-04-10-codex-mobile-web-platform.md  2026-04-11-local-direct-reconnect-and-resync.md  2026-04-11-local-pairing-device-trust-session-auth.md  2026-04-11-thread-detail-markdown-rendering.md  2026-04-12-client-i18n-chinese-support.md  2026-04-12-client-ui-refactor.md  2026-04-12-multi-theme-system.md  2026-04-12-thread-chat-flow.md  2026-04-12-thread-detail-workspace-browser.md  2026-04-13-bridge-modular-refactor.md  2026-04-13-client-modular-refactor.md  2026-04-13-project-centered-threads-home.md  2026-04-13-thread-detail-command-and-file-input.md  2026-04-13-thread-detail-composer-controls.md  2026-04-13-thread-detail-session-commands.md  2026-04-14-immediate-context-usage.md  2026-04-14-tauri-mobile-shell-integration.md  2026-04-16-qr-code-pairing.md  (+8 more)
(+188 files in other folders)
